--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
     <version>7.6.1</version>
     <scope>test</scope>
 </dependency>
+<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple.wso2/json-simple -->
+<dependency>
+    <groupId>com.googlecode.json-simple</groupId>
+    <artifactId>json-simple</artifactId>
+    <version>1.1.1</version>
+</dependency>
+
 </dependencies>
 <build>
 		<plugins>
